--- a/Buoi4/index.html
+++ b/Buoi4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS-Basic</title>
-    <script src=".js/array.js"></script>
+    <script src="js/array.js"></script>
     <script src="js/object.js"></script>
 </head>
 <body>
